Aula de 01 ate 05

--- a/aula0.ipynb
+++ b/aula0.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:347f2492d221e98604b44521a95a4db4803b6070f06864a16ac559109e00349f"
+  "signature": "sha256:62716ecfb2a112b737f1b85a520c8ace503d74f7c17fc99b43fad9e09cb372c2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -336,10 +336,22 @@
       }
      },
      "source": [
-      "No Windows, execute **Anaconda Launcher** no menu iniciar, no Mac execute **Launcher.app** no diret\u00f3rio ~/anaconda, e no Linux execute **ipython notebook** em uma janela de terminal.\n",
-      "Nos dois primeiros casos aparecer\u00e1 a seguinte janela:\n",
+      "#No Windows:#\n",
       "\n",
-      "![launcher](images/launcher.png)"
+      "Crie um diret\u00f3rio de trabalho para armazenar todos os Notebooks criados durante o curso. Nesse diret\u00f3rio crie um arquivo texto contendo o seguinte comando:\n",
+      "\n",
+      "```ipython notebook\n",
+      "```\n",
+      "\n",
+      "e salve com o nome ipython.bat. Para utilizar o IPython Notebook, clique duas vezes nesse arquivo.\n",
+      "\n",
+      "#No Mac:#\n",
+      "\n",
+      "execute **Launcher.app** no diret\u00f3rio ~/anaconda. Em seguida, clique no bot\u00e3o Launch ao lado do texto ipython-notebook.\n",
+      "\n",
+      "#no Linux:\n",
+      "\n",
+      "execute **ipython notebook** em uma janela de terminal."
      ]
     },
     {
@@ -350,7 +362,7 @@
       }
      },
      "source": [
-      "Clique em **launch** ao lado do IPython Notebook e ent\u00e3o abrir\u00e1 a seguinte p\u00e1gina no seu navegador de internet:\n",
+      "A seguinte p\u00e1gina abrir\u00e1 no seu navegador de internet:\n",
       "\n",
       "![ipython1](images/ipython1.png)"
      ]
@@ -363,12 +375,18 @@
       }
      },
      "source": [
-      "Nessa p\u00e1gina \u00e9 poss\u00edvel navegar pelos diret\u00f3rios de seu computador em busca de Notebooks. Clicando em **New Notebook** abrir\u00e1 um novo notebook em outra aba de seu navegador.\n",
+      "Nessa p\u00e1gina \u00e9 poss\u00edvel navegar pelos diret\u00f3rios de seu computador em busca de Notebooks. \n",
+      "\n",
+      "Clicando em **New Notebook** abrir\u00e1 um novo notebook em outra aba de seu navegador.\n",
       "A tela inicial \u00e9 apresentada e descrita a seguir:\n",
       "\n",
       "![ipython2](images/ipython2.png)\n",
       "\n",
-      "No ret\u00e2ngulo n\u00famero 1 temos o nome do Notebook, esse nome \u00e9 o mesmo do arquivo .ipynb encontrado no diret\u00f3rio atual. O ret\u00e2ngulo n\u00famero 2 cont\u00e9m os menus e comandos poss\u00edveis do Notebook. Finalmente, a \u00e1rea do ret\u00e2ngulo n\u00famero 3 \u00e9 a \u00e1rea de c\u00f3digo e texto do seu Notebook, chamada de c\u00e9lula. Um Notebook pode ter m\u00faltiplas c\u00e9lulas com diferentes conte\u00fados."
+      "No ret\u00e2ngulo n\u00famero 1 temos o nome do Notebook, esse nome \u00e9 o mesmo do arquivo .ipynb encontrado no diret\u00f3rio atual. \n",
+      "\n",
+      "O ret\u00e2ngulo n\u00famero 2 cont\u00e9m os menus e comandos poss\u00edveis do Notebook.\n",
+      "\n",
+      "Finalmente, a \u00e1rea do ret\u00e2ngulo n\u00famero 3 \u00e9 a \u00e1rea de c\u00f3digo e texto do seu Notebook, chamada de c\u00e9lula. Um Notebook pode ter m\u00faltiplas c\u00e9lulas com diferentes conte\u00fados."
      ]
     },
     {
@@ -417,7 +435,7 @@
       "\n",
       "Outros tipos de c\u00e9lulas s\u00e3o os **Heading 1-6** que cria c\u00e9lulas de t\u00edtulo de se\u00e7\u00e3o, para ajudar na divis\u00e3o de seu Notebook.\n",
       "\n",
-      "O intuito dos notebooks \u00e9 permitir que os alunos tenham uma c\u00f3pia das aulas em seu computador e editem adicionando coment\u00e1rios e c\u00f3digos de forma a organizar seu estudo. Na pr\u00f3xima se\u00e7\u00e3o aprenderemos a utilizar o Github para copiar os notebooks de aula e compartilhar na internet suas edi\u00e7\u00f5es e solu\u00e7\u00f5es dos exerc\u00edcios."
+      "O intuito dos notebooks \u00e9 permitir que os alunos tenham uma c\u00f3pia das aulas em seu computador e editem adicionando coment\u00e1rios e c\u00f3digos de forma a organizar seu estudo."
      ]
     },
     {
@@ -440,116 +458,11 @@
       }
      },
      "source": [
-      "Tutorial do github para:\n",
+      "Ao visualizar uma das aulas do curso provenientes do site: [PI-PYTHON](https://sites.google.com/site/fabricioolivetti/courses/processamento-de-informacao-em-python) aparecer\u00e1 a seguinte tela na parte superior:\n",
       "\n",
-      "* cria\u00e7\u00e3o de conta\n",
-      "* clonagem das aulas\n",
-      "* envio de altera\u00e7\u00f5es\n",
-      "* uso do nbviewer"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "Nosso curso usar\u00e1 o [Github](https://github.com/) para armazenar as aulas e exerc\u00edcios no formato IPython Notebook, cada aluno criar\u00e1 um reposit\u00f3rio no Github para guardar suas pr\u00f3prias anota\u00e7\u00f5es e solu\u00e7\u00f5es para os exerc\u00edcios.\n",
-      "Durante as aulas iremos explorar as diferentes solu\u00e7\u00f5es criadas pelos alunos em seus respectivos reposit\u00f3rios.\n",
+      "![ipython2](images/download.jpg)\n",
       "\n",
-      "No site do Github criem uma conta escolhendo um nome de usu\u00e1rio, colocando seu e-mail e escolhendo uma senha, clicando em **Sign up for GitHub**.\n",
-      "\n",
-      "![Github0](images/github0.png)\n",
-      "\n",
-      "Uma vez cadastrado, v\u00e1 no reposit\u00f3rio oficial da disciplina [PIPYTHON](https://github.com/folivetti/PIPYTHON) e clique no bot\u00e3o **fork** no canto superior direito, isso criar\u00e1 uma copia de todos os notebooks em sua pr\u00f3pria conta do GitHub.\n",
-      "\n",
-      "![Github1](images/github1.png)"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "Para fazer altera\u00e7\u00f5es nos arquivos primeiro \u00e9 necess\u00e1rio criar uma c\u00f3pia local. Para os sistemas [Windows](https://windows.github.com/) e [OSX (MAC)](https://mac.github.com/) existe uma ferramenta gr\u00e1fica para realizar os procedimentos de c\u00f3pia e atualiza\u00e7\u00e3o, eles podem ser obtidos nos respectivos links. No Linux basta instalar o pacote **git** atrav\u00e9s do instalador de pacotes."
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 3,
-     "metadata": {
-      "slideshow": {
-       "slide_type": "slide"
-      }
-     },
-     "source": [
-      "Windows e OS/X "
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "fragment"
-      }
-     },
-     "source": [
-      "*Escrever instru\u00e7\u00f5es com telas*"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 3,
-     "metadata": {
-      "slideshow": {
-       "slide_type": "slide"
-      }
-     },
-     "source": [
-      "Linux"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "Abra um terminal e acesse a pasta *home* do seu usu\u00e1rio:\n",
-      "\n",
-      "```bash\n",
-      "cd ~/\n",
-      "```\n",
-      "\n",
-      "Em seguida digite o comando:\n",
-      "\n",
-      "```bash\n",
-      "git clone https://github.com/USUARIO/PIPYTHON\n",
-      "```\n",
-      "\n",
-      "substituindo *USUARIO* pelo seu nome de usu\u00e1rio. Isso criar\u00e1 a pasta *PIPYTHON* contendo todas as aulas. Os notebooks podem ser acessados e editados atrav\u00e9s do IPython Notebook, acessando esse diret\u00f3rio.\n",
-      "Ap\u00f3s realizar alguma altera\u00e7\u00e3o, nessa mesma pasta no terminal digite os seguintes comandos em sequ\u00eancia:\n",
-      "\n",
-      "```bash\n",
-      "git add *\n",
-      "git commit -m \"alteracoes\"\n",
-      "git push\n",
-      "```\n",
-      "\n",
-      "Ser\u00e1 necess\u00e1rio digitar o login e senha do github para concluir a opera\u00e7\u00e3o. Seu notebook poder\u00e1 ser acessado pelo endere\u00e7o:\n",
-      "\n",
-      "http://nbviewer.ipython.org/github/USUARIO/PIPYTHON/blob/master/NOME.ipynb \n",
-      "\n",
-      "onde *USUARIO* \u00e9 seu nome de usu\u00e1rio e *NOME* o nome do Notebook. Veja por exemplo o endere\u00e7o de acesso dessa aula, nomeada *aula0* dispon\u00edvel no meu GitHub (*folivetti*): \n",
-      "\n",
-      "http://nbviewer.ipython.org/github/folivetti/PIPYTHON/blob/master/aula0.ipynb"
+      "Ao clicar na seta circulada em vermelho ser\u00e1 feito o download desse Notebook para seu computador. Copie para a sua pasta de trabalho e execute o IPython Notebook. Voc\u00ea poder\u00e1 abrir esse Notebook e edit\u00e1-lo para adicionar conte\u00fados ou corrigir os existentes."
      ]
     },
     {
