correções nas aulas 00 e 01

--- a/Aula03.ipynb
+++ b/Aula03.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:9b77482848ddbbbfb723a41f982810d0a1e4096dfaac68cc9d642db613a075d7"
+  "signature": "sha256:5ecc076ecd27a799a1b794b43b7d7be715e0861956adec314dfc703737d15c88"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,7 +19,11 @@
       "HTML(open(css_file, \"r\").read())"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
      "outputs": [
       {
        "html": [
@@ -179,7 +183,7 @@
      "source": [
       "Nossa fun\u00e7\u00e3o para o c\u00e1lculo de entropia ficou da seguinte maneira:\n",
       "\n",
-      "```python\n",
+      "```\n",
       "def entropia(p):\n",
       "    return -p*log(p,2) - (1.0-p)*log(1.0-p,2)\n",
       "```\n",
@@ -231,7 +235,7 @@
       "\n",
       "Nossa fun\u00e7\u00e3o poderia ficar ent\u00e3o da seguinte forma:\n",
       "\n",
-      "```python\n",
+      "```\n",
       "def entropia(p):\n",
       "    Se p == 0 ou p == 1:\n",
       "        return 0.0\n",
