--- a/Aula04.ipynb
+++ b/Aula04.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:b781482ed7c7e770cb2ba1d1994bb3ff0010e726ee35220187896b46d8fb9ae3"
+  "signature": "sha256:a69d8f152e2cc9ec82031f179d60522237cd7f57129a5c906442251d3dbee35b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,7 +19,11 @@
       "HTML(open(css_file, \"r\").read())"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
      "outputs": [
       {
        "html": [
