--- a/aula0.ipynb
+++ b/aula0.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:62716ecfb2a112b737f1b85a520c8ace503d74f7c17fc99b43fad9e09cb372c2"
+  "signature": "sha256:6f9234a1facf939cf3abb84afe8f759810808f1372f29f49ee0cd8e7290ad1fc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -415,9 +415,9 @@
       "\n",
       "Links para p\u00e1ginas externas podem ser feitos colocando um nome entre colchetes e o link entre par\u00eanteses \\[NOMELINK\\]\\(url\\). Ex.:\n",
       "\n",
-      "\\[UFABC\\]\\(www.ufabc.edu.br\\) se torna:\n",
+      "\\[UFABC\\]\\(http://www.ufabc.edu.br\\) se torna:\n",
       "\n",
-      "[UFABC](www.ufabc.edu.br)\n",
+      "[UFABC](http://www.ufabc.edu.br)\n",
       "\n",
       "Se na primeira c\u00e9lula de c\u00f3digo voc\u00ea executar o seguinte comando:\n",
       "\n",
@@ -425,9 +425,14 @@
       "from IPython.display import YouTubeVideo, HTML, Image, display\n",
       "```\n",
       "\n",
-      "Nas c\u00e9lulas de c\u00f3digo subsequentes voc\u00ea poder\u00e1 inserir imagens e v\u00eddeos do Youtube com o comando:\n",
+      "Nas c\u00e9lulas de c\u00f3digo subsequentes voc\u00ea poder\u00e1 inserir imagens com o comando:\n",
       "```python\n",
       "Image('link da imagem')\n",
+      "```\n",
+      "\n",
+      "E v\u00eddeos com o comando:\n",
+      "\n",
+      "```python\n",
       "YouTubeVideo('id do video',640,480)\n",
       "```\n",
       "\n",
@@ -462,7 +467,9 @@
       "\n",
       "![ipython2](images/download.jpg)\n",
       "\n",
-      "Ao clicar na seta circulada em vermelho ser\u00e1 feito o download desse Notebook para seu computador. Copie para a sua pasta de trabalho e execute o IPython Notebook. Voc\u00ea poder\u00e1 abrir esse Notebook e edit\u00e1-lo para adicionar conte\u00fados ou corrigir os existentes."
+      "Ao clicar na seta circulada em vermelho ser\u00e1 feito o download desse Notebook para seu computador. Copie para a sua pasta de trabalho e execute o IPython Notebook. Voc\u00ea poder\u00e1 abrir esse Notebook e edit\u00e1-lo para adicionar conte\u00fados ou corrigir os existentes.\n",
+      "\n",
+      "**Nota:** pode ser necess\u00e1rio fazer o download clicando com o bot\u00e3o direito e, em seguida, \"salvar como\"."
      ]
     },
     {
