--- a/Aula01.ipynb
+++ b/Aula01.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:2522aa2defbc00dcaf5e1681aa94520d668f90e0f762213e5d5290055ffcddba"
+  "signature": "sha256:a26cb7532f070978ed0ba45e686476f1dbe6a64da51adbf7eac599c99a490723"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2007,6 +2007,7 @@
       "#Exerc\u00edcio 03\n",
       "\n",
       "# 1) Pe\u00e7a para o usuario digitar o nome e imprima \"Ola <nome>, como vai?\"\n",
+      "# n\u00e3o esque\u00e7a que o nome deve ser digitado entre aspas.\n",
       "nome = \n",
       "print \n",
       "\n"
