--- a/Aula05.ipynb
+++ b/Aula05.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:7a5fa5e1ba8e4353d2a59bdcd02f56a3dfc2beb97968455519bcf25ffe7802af"
+  "signature": "sha256:39e2f1dce409dfe79bab3e2c499462a371a63ea97c03c7a4a239adcd557feacf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,7 +19,11 @@
       "HTML(open(css_file, \"r\").read())"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
      "outputs": [
       {
        "html": [
@@ -179,7 +183,7 @@
      "source": [
       "Anteriormente, vimos alguns exemplos de cria\u00e7\u00e3o e manipula\u00e7\u00e3o de listas:\n",
       "\n",
-      "```python\n",
+      "```\n",
       "lista = [1,2,3,4,5]\n",
       "print lista[0]\n",
       "```"
@@ -195,7 +199,7 @@
      "source": [
       "Tamb\u00e9m vimos uma forma de criar listas de inteiros com a fun\u00e7\u00e3o `range()`:\n",
       "\n",
-      "```python\n",
+      "```\n",
       "lista = range(1,11)\n",
       "print lista # [1,2,3,4,5,6,7,8,9,10]\n",
       "```"
@@ -211,7 +215,7 @@
      "source": [
       "Para acessar um elemento em uma lista fazemos:\n",
       "\n",
-      "```python\n",
+      "```\n",
       "print lista[0] # primeiro elemento\n",
       "print lista[-1] # \u00faltimo elemento\n",
       "```"
@@ -227,7 +231,7 @@
      "source": [
       "E para uma faixa de valores:\n",
       "\n",
-      "```python\n",
+      "```\n",
       "print lista[0:3] # elemento 0, 1 e 2\n",
       "print lista[5:2:-1] # do 5 ao 3, de -1 em -1\n",
       "```"
@@ -1493,13 +1497,13 @@
      "source": [
       "**Syntactic Sugar:** Podemos criar uma lista utilizando uma nota\u00e7\u00e3o mais pr\u00f3xima da matem\u00e1tica:\n",
       "\n",
-      "```python\n",
+      "```\n",
       "ListaQuad = [ x*x for x in range(1,101)]\n",
       "```\n",
       "\n",
       "Esse formato de gera\u00e7\u00e3o de lista \u00e9 conhecido como **list comprehension** e pode ser combinado com instru\u00e7\u00f5es condicionais:\n",
       "\n",
-      "```python\n",
+      "```\n",
       "ListaQuadImpar = [x*x for x in range(1,101) if (x*x) % 2 == 1]\n",
       "```"
      ]
