--- a/Aula01.ipynb
+++ b/Aula01.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:a26cb7532f070978ed0ba45e686476f1dbe6a64da51adbf7eac599c99a490723"
+  "signature": "sha256:af2b23e3b3cca276cfad0df967b7f75ebac8195eca7d9ce499be094440f8f940"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2290,6 +2290,85 @@
       }
      ],
      "prompt_number": 84
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "O comando `print` permite o uso de alguns caracteres especiais como:\n",
+      "\n",
+      "* '\\t': adiciona uma tabula\u00e7\u00e3o\n",
+      "* '\\n': pula uma linha"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Tamb\u00e9m podemos especificar formata\u00e7\u00f5es especiais utilizando vari\u00e1veis:\n",
+      "\n",
+      "* '%d': valor inteiro\n",
+      "* '%.nf': valor real com n casas decimais\n",
+      "* '%s': string"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "m = 1\n",
+      "n =6\n",
+      "d = 1/float(n)\n",
+      "print '%s: %d/%d = %.3f' % (\"O valor da divis\u00e3o\", m, n, d)"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "O valor da divis\u00e3o: 1/6 = 0.167\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print \"Elemento 1 \\t Elemento 2 \\nElemento 3 \\t Elemento 4\""
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Elemento 1 \t Elemento 2 \n",
+        "Elemento 3 \t Elemento 4\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
