--- a/Aula04.ipynb
+++ b/Aula04.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:a69d8f152e2cc9ec82031f179d60522237cd7f57129a5c906442251d3dbee35b"
+  "signature": "sha256:7dd9e8a406f9ec99265a291360a62300039b99f055b777fa2e25fccd6d15677f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -258,7 +258,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -332,6 +332,54 @@
      "source": [
       "Reparem que substituindo $2$ por qualquer outro n\u00famero, convertemos o n\u00famero para outras bases menores do que $10$."
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "**Nota:** Podemos indicar para uma fun\u00e7\u00e3o um valor padr\u00e3o para sua vari\u00e1vel."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def Converte(dec,base=2):\n",
+      "\n",
+      "    num = ''\n",
+      "\n",
+      "    while dec > 0:\n",
+      "        div, resto = DivResto(dec,base)\n",
+      "        dec = div\n",
+      "        num = str(resto) + num\n",
+      "    return num\n",
+      "\n",
+      "print Converte(14) # usar\u00e1 a base 2\n",
+      "print Converte(14, 3) # usar\u00e1 a base 3\n",
+      "print Converte(14, base=3) # usar\u00e1 a base 3"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1110\n",
+        "112\n",
+        "112\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
