--- a/Aula06.ipynb
+++ b/Aula06.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3313b4f30101a2d491f5ed3bc04eb1c45f00acd9ae292c3303b8eee78ff0cdf2"
+  "signature": "sha256:80b672ab4dc1788e90ce3c2c2fc3eeb0b44226e1b7706e3e64b96510f091e198"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -263,6 +263,26 @@
      "prompt_number": 4
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "agenda = {'Jose': '2233-2332', 'Joao': '3333-2332', 'Maria': '444-2332'}\n",
+      "print agenda"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{'Jose': '2233-2332', 'Joao': '3333-2332', 'Maria': '444-2332'}\n"
+       ]
+      }
+     ],
+     "prompt_number": 47
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -377,19 +397,387 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Vamos fazer um Gerador de Lero-Lero utilizando dicion\u00e1rios.\n",
+      "**Anagrama:** determine se uma palavra $p1$ \u00e9 anagrama da palavra $p2$.\n",
       "\n",
+      "$p1$ e $p2$ s\u00e3o anagramas se for poss\u00edvel escrever $p1$ utilizando as letras de $p2$. Ex.:\n",
       "\n",
-      "bla bla bla teoria"
+      "* amor, roma\n",
+      "* pedro, poder\n",
+      "* rato, rota\n",
+      "* assim, missa"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Para resolver esse problema basta verificar se a lista de frequ\u00eancias das letras de $p1$ \u00e9 igual a de $p2$:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "def Anagrama(p1,p2):\n",
+      "    return FreqLetras(p1) == FreqLetras(p2)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 46
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Uma lista de frequ\u00eancias de letras pode ser feita na forma (ex.: amar):\n",
+      "\n",
+      "```\n",
+      "Freq['a'] = 2\n",
+      "Freq['b'] = 0\n",
+      "...\n",
+      "Freq['m'] = 1\n",
+      "...\n",
+      "Freq['r'] = 1\n",
+      "...\n",
+      "Freq['z'] = 0\n",
+      "```"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Ou ignorando as letras com frequ\u00eancia igual a $0$:\n",
+      "\n",
+      "```\n",
+      "Freq = { 'a':2, 'm':1, 'r':1' }\n",
+      "```"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def FreqLetras(palavra):\n",
+      "    Freq = {}\n",
+      "    for letra in palavra:\n",
+      "        # se a letra j\u00e1 existe, acrescenta mais 1\n",
+      "        if letra in Freq:\n",
+      "            Freq[letra] += 1  # Syntactic sugar para Freq[letra] = Freq[letra] + 1\n",
+      "        else:\n",
+      "            Freq[letra] = 1\n",
+      "    return Freq\n",
+      "\n",
+      "print Anagrama(\"amor\", \"roma\")\n",
+      "print Anagrama(\"amor\", \"terror\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "True\n",
+        "False\n"
+       ]
+      }
+     ],
+     "prompt_number": 48
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Para facilitar podemos utilizar a fun\u00e7\u00e3o `defaultdict` da biblioteca [`collections`](https://docs.python.org/2/library/collections.html#collections.defaultdict) que permite criar um dicion\u00e1rio em que toda chave inexistente cont\u00e9m um valor padr\u00e3o:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from collections import defaultdict\n",
+      "\n",
+      "def Padrao():\n",
+      "    return 0\n",
+      "\n",
+      "Freq = defaultdict( Padrao )\n",
+      "print Freq['a']\n",
+      "Freq['a'] += 10\n",
+      "print Freq['a']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0\n",
+        "10\n"
+       ]
+      }
+     ],
+     "prompt_number": 52
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "De forma conveniente, a fun\u00e7\u00e3o `int()`, usada para converter um valor para inteiro, retorna `0` caso nenhum par\u00e2metro seja passado para ela.\n",
+      "\n",
+      "*Nota:* da mesma forma, `float()`  retorna `0.0` e `str()` retorna `''`."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from collections import defaultdict\n",
+      "\n",
+      "print int()\n",
+      "Freq = defaultdict( int )\n",
+      "print Freq['a']\n",
+      "Freq['a'] += 10\n",
+      "print Freq['a']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0\n",
+        "0\n",
+        "10\n"
+       ]
+      }
+     ],
+     "prompt_number": 53
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def FreqLetras(palavra):\n",
+      "    Freq = defaultdict( int )\n",
+      "    for letra in palavra:\n",
+      "        Freq[letra] += 1\n",
+      "    return Freq\n",
+      "\n",
+      "print Anagrama(\"amor\", \"roma\")\n",
+      "print Anagrama(\"amor\", \"terror\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "True\n",
+        "False\n"
+       ]
+      }
+     ],
+     "prompt_number": 54
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Dicion\u00e1rios como Mapa de Substitui\u00e7\u00e3o"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**Escrita L337:** no submundo hacker \u00e9 comum escrever as palavras com a substitui\u00e7\u00e3o de algumas letras por n\u00fameros ou s\u00edmbolos como exemplificado abaixo:\n",
+      "\n",
+      "|Letra|L337|\n",
+      "|--|--|\n",
+      "|A|4|\n",
+      "|C|(|\n",
+      "|E|3|\n",
+      "|G|6|\n",
+      "|H|#|\n",
+      "|I|!|\n",
+      "|O|0|\n",
+      "|S|$|\n",
+      "|T|7|\n",
+      "|X|%|"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Podemos criar um dicion\u00e1rio que mapeia cada letra do alfabeto para seu correspondente L337, se houver, ou a pr\u00f3pria letra caso contr\u00e1rio.\n",
+      "\n",
+      "Temos que tomar o cuidado de fazer o mapa para mai\u00fasculas ou m\u00ednusculas."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Vamos primeiro criar uma lista de *tuplas* contendo as letras que queremos mapear.\n",
+      "\n",
+      "**tuplas** s\u00e3o listas que n\u00e3o podem ser alteradas, elas s\u00e3o definidas por par\u00eanteses ao inv\u00e9s de colchetes."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "trocas = [ ('A', '4'), ('C', '('), ('E', '3'), ('G','6'), ('H','#'), ('I','!'), ('O','0'), ('S','$'), ('T','7'), ('X','%') ]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 55
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Em seguida percorremos essa lista de trocas para gerar nosso dicion\u00e1rio `Mapa`.\n",
+      "\n",
+      "Sabendo que todas as tuplas tem apenas dois elementos podemos percorrer essa lista de uma forma conveniente:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "Mapa = {}\n",
+      "for letra, l337 in trocas:\n",
+      "    Mapa[letra.lower()] = l337 # converte a letra para min\u00fascula\n",
+      "    Mapa[letra.upper()] = l337 # converte a letra para mai\u00fascula"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 57
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Agora basta que a nossa fun\u00e7\u00e3o fa\u00e7a o seguinte, dado um mapa de trocas e uma frase, construir uma string da seguinte maneira:\n",
+      "\n",
+      "* Para cada letra da palavra:\n",
+      "  - Se a letra existir no Mapa, adiciona a letra convertida na nova palavra\n",
+      "  - Sen\u00e3o, adiciona a pr\u00f3pria letra\n",
+      "  \n",
+      "Para facilitar a constru\u00e7\u00e3o da string, vamos adicionar cada letra da nova palavra em uma lista.\n",
+      "\n",
+      "Em seguida podemos usar o seguinte comando para construir uma string a partir de uma lista de letras:\n",
+      "\n",
+      "```\n",
+      "palavra = ''.join(listaLetras)\n",
+      "```"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def converte(palavra, Mapa):\n",
+      "    listaLetras = []\n",
+      "    for letra in palavra:\n",
+      "        if letra in Mapa:\n",
+      "            listaLetras.append(Mapa[letra])\n",
+      "        else:\n",
+      "            listaLetras.append(letra)\n",
+      "    return ''.join(listaLetras)\n",
+      "\n",
+      "print converte('Agora somos hackers', Mapa)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "460r4 $0m0$ #4(k3r$\n"
+       ]
+      }
+     ],
+     "prompt_number": 58
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Para evitar a condicional para verificar se a letra existe no Mapa, podemos usar o comando `.get(chave, padrao)` que recebe dois par\u00e2metros:\n",
+      "\n",
+      "* a chave que queremos recuperar do dicion\u00e1rio\n",
+      "* valor padr\u00e3o caso a chave n\u00e3o seja encontrada"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def converte(palavra, Mapa):\n",
+      "    listaLetras = []\n",
+      "    for letra in palavra:\n",
+      "        listaLetras.append( Mapa.get(letra, letra) )  # se n\u00e3o encontrar a letra, queremos que retorne a mesma letra\n",
+      "    return ''.join(listaLetras)\n",
+      "\n",
+      "print Mapa.get('A', 'A')\n",
+      "print Mapa.get('B', 'B')\n",
+      "print converte('Agora somos mais hackers', Mapa)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "4\n",
+        "B\n",
+        "460r4 $0m0$ m4!$ #4(k3r$\n"
+       ]
+      }
+     ],
+     "prompt_number": 61
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Podemos reduzir ainda mais essa fun\u00e7\u00e3o usando **list comprehension**:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def converte(palavra, Mapa):\n",
+      "    return ''.join( [ Mapa.get(letra, letra) for letra in palavra ] )\n",
+      "\n",
+      "print converte('Agora somos muito hackers', Mapa)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "460r4 $0m0$ mu!70 #4(k3r$\n"
+       ]
+      }
+     ],
+     "prompt_number": 60
     }
    ],
    "metadata": {}
