--- a/Aula02.ipynb
+++ b/Aula02.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:46b6738a3040f41b71f536a43d377a695d4d8ad1e584d555cdfbf2e8c5e1ef63"
+  "signature": "sha256:4cf6e849346fd2edb014ad7ce8b98890ae613fbb15d01bc7e40c6096967b4bc5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -694,7 +694,7 @@
      "collapsed": false,
      "input": [
       "import bokeh.plotting as plt\n",
-      "output_notebook()\n",
+      "plt.output_notebook()\n",
       "x = [-5,-4,-3,-2,-1,0,1,2,3,4,5]\n",
       "y = [25,16,9,4,1,0,1,4,9,16,25]\n",
       "plt.line(x,y, color='green')\n",
