--- a/Aula02.ipynb
+++ b/Aula02.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:4cf6e849346fd2edb014ad7ce8b98890ae613fbb15d01bc7e40c6096967b4bc5"
+  "signature": "sha256:7d985dcb9dfeb5d157a5136ac80d44cf2a818bbbdf450e8cb154d9db770c28fc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1303,7 +1303,7 @@
       }
      },
      "source": [
-      "Quando utilizamos o `pylab` temos tamb\u00e9m a fun\u00e7\u00e3o `frange(inicio, fim, passo)` que gera uma lista de valores entre *inicio* e *fim* de *passo* em *passo*."
+      "Na biblioteca `numpy` temos tamb\u00e9m a fun\u00e7\u00e3o `arange(inicio, fim, passo)` que gera uma lista de valores entre *inicio* e *fim* de *passo* em *passo*."
      ]
     },
     {
