--- a/ListaEX_02.ipynb
+++ b/ListaEX_02.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:445baadb5bd87ac40dd8a1d58c03cba7665e009a633bdfbe14e59639b02c46a1"
+  "signature": "sha256:850ecaa337f08a70d78c9e61c6b779960fb4e3a172d44bb605624ef2c33d1fd7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -295,7 +295,7 @@
        ]
       }
      ],
-     "prompt_number": 76
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -331,7 +331,7 @@
        ]
       }
      ],
-     "prompt_number": 79
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -374,17 +374,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Exerc\u00edcio 5b:** Crie uma fun\u00e7\u00e3o que receba apenas as coordenadas do centro da circunfer\u00eancia e o seu raio e retorne uma fun\u00e7\u00e3o que verifica se um ponto est\u00e1 dentro da circunfer\u00eancia."
+      "**Exerc\u00edcio 5b:** Crie uma fun\u00e7\u00e3o chamada `Circunferencia` que recebe como entrada as coordenadas do centro `cx` e `cy` e o raio `r` da circunfer\u00eancia. Essa fun\u00e7\u00e3o deve criar uma outra fun\u00e7\u00e3o chamada `VerificaPonto` que recebe como entrada as coordenadas `x` e `y` de um ponto e retorna `True` caso o ponto esteja dentro da circunfer\u00eancia, ou `False` caso contr\u00e1rio. \n",
+      "\n",
+      "A fun\u00e7\u00e3o `Circunferencia` deve retornar a fun\u00e7\u00e3o `Verifica`."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
       "\n",
       "\n",
       "\n",
@@ -405,7 +403,7 @@
        ]
       }
      ],
-     "prompt_number": 81
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
